--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "@tryghost/content-api": "^1.11.16",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
@@ -18,6 +19,10 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.7.7"
   }
 }
